--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,9 @@ jobs:
         uses: actions/checkout@v2
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: jdk16
+      - run: wget https://github.com/sormuras/bach/raw/master/install-jdk.sh
+      - run: source install-jdk.sh --feature 16
       - name: run test
         run: |
           ./test.sh
