--- a/gradle/config/script/coverage-all.gradle
+++ b/gradle/config/script/coverage-all.gradle
@@ -25,7 +25,7 @@ task jacocoRootReport(type: JacocoReport, group: 'verification') {
     reports {
         html.enabled = true
         xml.enabled = true
-        csv.required = false
+        csv.enabled = true
     }
 }
 
