--- a/gradle/config/script/coverage.gradle
+++ b/gradle/config/script/coverage.gradle
@@ -1,10 +1,10 @@
-apply plugin: 'java'
 apply plugin: 'jacoco'
 
 jacocoTestReport {
     reports {
         html.enabled true
         xml.enabled true
+        csv.enabled true
     }
 }
 
