--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         id: jacoco
         uses: cicirello/jacoco-badge-generator@v2
         with:
-          badges-directory: badges
+          badges-directory: .github/badges
           jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv
       - name: Commit and push
         if: ${{ github.event_name != 'pull_request' }}
